# gql

./: .gitignore  Cargo.toml  build.rs
.sqlx/: query-4b8a97f1144ac80cc3d7c4f9ad28f7ce5aa0fad24059440d878be0bbf5bbe37d.json  query-5c88dd0242bccbcb93da8a934253ad0766dcb21efd003b8541bb604aa9dbf21f.json  query-776605a4601d856cc893b907d25bb7ec97460a098ff17c65782108e3ff2df5af.json  query-9af1f633fcc6718a5efab56e2505ce3ab996ca2f389d48824e86f6231dd8f1de.json  query-a0ef1239ebeed3931569d322f54bd225f46b1de3c44fc448a39c0e5b3325ab6c.json  query-c4b4b0e1e227f7ff52e6992a6527f7956c5767819928ca3ca54284c343f1b894.json  query-c96d54eb7c1b47611a423f03a4d6545ac158026de923b92399e1fbcfd47a759b.json  query-d29c9f7d96f60686dcfc4ecf22f7f23f00b59cda5606fa5e88a17baa7adf477f.json  query-e13849b51e31652ae5587e72e1abbbad784903f6326e357555e3b8fa49c6b31f.json  query-e7a6bdbbad62d2df30c858fe6c6b6f5ee440d27656afe9f6aff1fa5c418d1ed1.json  query-f9b12f8340338b460bf5b29de42cfc00c14217b96def6e7d9abc5e4aa11d3a7c.json
migrations/: 20230823063215_init.sql
proto/: helloworld.proto
src/: drill.yaml  main.rs  server.rs  transactions.csv
src/data_loaders/: mod.rs
src/db/: mod.rs
src/handlers/: login.rs
src/models/: color.rs  color_input.rs  mod.rs  phone.rs  phone_input.rs  sport.rs  user.rs  user_input.rs
src/mutation/: mod.rs
src/query/: mod.rs
src/utils/: jwt.rs
test/loadtesting/: script.js
