[package]
name = "gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-web = "4.3"
async-stream = "0.3"
env_logger = "0.10"
futures = "0.3"
juniper = { version = "0.15", features = ["expose-test-schema"] }
juniper_actix = "0.4.0"
juniper_graphql_ws = "0.3"
async-graphql = "6"
async-graphql-actix-web = "6"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tokio ={ version = "1.29", features = ["macros"]} 
rusqlite = "0.29"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
async-trait = "0.1.73"
lazy_static = "1.4.0"
async_once = "0.2.6"
