[package]
name = "gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-identity = "0.5"
actix-rt = "2.9"
actix-web = "4.3"
async_once = "0.2.6"
async-graphql = "6"
async-graphql-actix-web = "6"
async-stream = "0.3"
async-trait = "0.1.73"
dataloader = "0.16.0"
env_logger = "0.10"
futures = "0.3"
juniper = { version = "0.15", features = ["expose-test-schema"] }
juniper_actix = "0.4.0"
juniper_graphql_ws = "0.3"
lazy_static = "1.4.0"
rand = "0.8"
rusqlite = "0.29"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio ={ version = "1.29", features = ["macros"]} 
